force-app/main/default/objects/PMC_AccountSalesArea__c/PMC_AccountSalesArea__c.object-meta.xml
<CustomObject>
    <description>Customer Sales Area Information</description>
    <label>Account Sales Area</label>
    <nameField>
        <label>Account Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Sales Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>