force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_AccountAssignmentGroup__c.field-meta.xml
<CustomField>
    <fullName>PMC_AccountAssignmentGroup__c</fullName>
    <label>Account Assignment Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>