force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_APARToleranceGroup__c.field-meta.xml
<CustomField>
    <fullName>PMC_APARToleranceGroup__c</fullName>
    <label>Tolerance Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>