force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_CashPlanningGroup__c.field-meta.xml
<CustomField>
    <fullName>PMC_CashPlanningGroup__c</fullName>
    <label>Planning Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>