force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_CSA_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>PMC_CSA_Auto_Number__c</fullName>
    <label>CSA Auto Number</label>
    <type>AutoNumber</type>
</CustomField>