force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_CustomerPricingProcedure__c.field-meta.xml
<CustomField>
    <fullName>PMC_CustomerPricingProcedure__c</fullName>
    <label>Customer Pricing Procedure</label>
    <length>1</length>
    <type>Text</type>
</CustomField>