force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_CustomerTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>PMC_CustomerTaxCategory__c</fullName>
    <label>Customer Tax Category</label>
    <length>10</length>
    <type>Text</type>
</CustomField>