force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_CustomerTaxClassification__c.field-meta.xml
<CustomField>
    <fullName>PMC_CustomerTaxClassification__c</fullName>
    <label>Customer Tax Classification</label>
    <length>1</length>
    <type>Text</type>
</CustomField>