force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_DG_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>PMC_DG_Account_Name__c</fullName>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Sales Areas</relationshipLabel>
    <relationshipName>Account_Sales_Areas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>