force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>PMC_DistributionChannel__c</fullName>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_DistributionChannel</valueSetName>
    </valueSet>
</CustomField>