force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_Division__c.field-meta.xml
<CustomField>
    <fullName>PMC_Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>