force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_InvoiceDate__c</fullName>
    <label>Invoice Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>