force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_LayoutSortingRule__c.field-meta.xml
<CustomField>
    <fullName>PMC_LayoutSortingRule__c</fullName>
    <label>Sort Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>