force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_OrderCombination__c.field-meta.xml
<CustomField>
    <fullName>PMC_OrderCombination__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Order Combination Allowed</label>
    <type>Checkbox</type>
</CustomField>