force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_OrderProbability__c.field-meta.xml
<CustomField>
    <fullName>PMC_OrderProbability__c</fullName>
    <label>Order Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>