force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_ReconciliationAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_ReconciliationAccount__c</fullName>
    <label>Reconciliation Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>