force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_RecordPaymentHistoryIndicator__c.field-meta.xml
<CustomField>
    <fullName>PMC_RecordPaymentHistoryIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Payment History</label>
    <type>Checkbox</type>
</CustomField>