force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>PMC_SalesOrganization__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_Sales_Organization</valueSetName>
    </valueSet>
</CustomField>