force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_ShippingCondition__c.field-meta.xml
<CustomField>
    <fullName>PMC_ShippingCondition__c</fullName>
    <label>Shipping Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z0</fullName>
                <label>No Transport Req</label>
            </value>
            <value>
                <fullName>Z1</fullName>
                <label>Rail</label>
            </value>
            <value>
                <fullName>Z2</fullName>
                <label>Truck</label>
            </value>
            <value>
                <fullName>Z3</fullName>
                <label>Vessel</label>
            </value>
            <value>
                <fullName>Z4</fullName>
                <label>Barge</label>
            </value>
            <value>
                <fullName>Z6</fullName>
                <label>Road / Rail Auto Sch</label>
            </value>
            <value>
                <fullName>Z7</fullName>
                <label>IN-Inland/Intermodal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>