force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_SoldToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_SoldToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold-to partner related</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Sold-to</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Sales Areas (Sold-to partner related)</relationshipLabel>
    <relationshipName>Account_SalesArea_PartnerFunction</relationshipName>
    <type>Lookup</type>
</CustomField>