force-app/main/default/objects/PMC_AccountSalesArea__c/fields/PMC_UnderdelivTolrtdLmtRatioInPct__c.field-meta.xml
<CustomField>
    <fullName>PMC_UnderdelivTolrtdLmtRatioInPct__c</fullName>
    <label>Underdelivery Tolerance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>