force-app/main/default/objects/PMC_AccountSalesArea__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AL00</fullName>
                <label>Maceió</label>
            </value>
            <value>
                <fullName>AM01</fullName>
                <label>Itacoatiara</label>
            </value>
            <value>
                <fullName>BA01</fullName>
                <label>Luis Eduardo Magalhães</label>
            </value>
            <value>
                <fullName>BA02</fullName>
                <label>Candeias</label>
            </value>
            <value>
                <fullName>BA03</fullName>
                <label>Feira de Santana</label>
            </value>
            <value>
                <fullName>BA04</fullName>
                <label>Camaçari</label>
            </value>
            <value>
                <fullName>BA05</fullName>
                <label>Conceição do Jacuipe</label>
            </value>
            <value>
                <fullName>BA50</fullName>
                <label>Barreiras</label>
            </value>
            <value>
                <fullName>BA51</fullName>
                <label>Correntina</label>
            </value>
            <value>
                <fullName>BA52</fullName>
                <label>Formosa do Rio Preto</label>
            </value>
            <value>
                <fullName>BA53</fullName>
                <label>Riachão das Neves</label>
            </value>
            <value>
                <fullName>BA54</fullName>
                <label>São Desidério</label>
            </value>
            <value>
                <fullName>ES01</fullName>
                <label>Serra</label>
            </value>
            <value>
                <fullName>ES02</fullName>
                <label>Viana</label>
            </value>
            <value>
                <fullName>ES03</fullName>
                <label>Vitória</label>
            </value>
            <value>
                <fullName>ES04</fullName>
                <label>Ibatiba</label>
            </value>
            <value>
                <fullName>GO01</fullName>
                <label>Bom Jesus de Goiás</label>
            </value>
            <value>
                <fullName>GO02</fullName>
                <label>Rio Verde</label>
            </value>
            <value>
                <fullName>GO03</fullName>
                <label>Anápolis</label>
            </value>
            <value>
                <fullName>GO04</fullName>
                <label>Catalão</label>
            </value>
            <value>
                <fullName>GO05</fullName>
                <label>Formosa</label>
            </value>
            <value>
                <fullName>GO06</fullName>
                <label>Aparecida de Goiania</label>
            </value>
            <value>
                <fullName>GO07</fullName>
                <label>Goiatuba</label>
            </value>
            <value>
                <fullName>GO08</fullName>
                <label>Cristalina</label>
            </value>
            <value>
                <fullName>GO09</fullName>
                <label>Itumbiara</label>
            </value>
            <value>
                <fullName>GO10</fullName>
                <label>Jataí</label>
            </value>
            <value>
                <fullName>GO11</fullName>
                <label>Posse</label>
            </value>
            <value>
                <fullName>MA01</fullName>
                <label>São Luis</label>
            </value>
            <value>
                <fullName>MA02</fullName>
                <label>Açailândia</label>
            </value>
            <value>
                <fullName>MA03</fullName>
                <label>Alto Parnaíba</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>